conexao com o banco h2

--- a/src/main/resources/application-example.yml
+++ b/src/main/resources/application-example.yml
@@ -8,6 +8,6 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:spring_challenge
-    username: sa
-    password: sa
+    url: jdbc:connection:string
+    username: user
+    password: pass
