Utilizacao de nova base de dados

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:file:./db/spring-challenge.db
+    url: jdbc:h2:file:./db/springchallenge.db
     username: sa
     password: sa
